added node module react-beautiful-dnd for draq and grop with fake data generator, changing styles; board component filled with sample

--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,13 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.board-general {
+  background-color: aquamarine;
+  color: red;
+}
+
+.board-root {
+  display: flex;
+  justify-content: space-between;
+}
