changed some styling , react-beautiful-dnd substitute

--- a/public/style.css
+++ b/public/style.css
@@ -27,5 +27,6 @@ form div {
 
 .board-root {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
+  /* margin: 0 5px; */
 }
